tests/unit/default/syntax-error/100-add-pk-alias-table-columns.x.t
---- IN ----
+PK@alias%table(foo,bar)|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...e(foo,bar)` near `|` at position 24 - at line 1
---- EXIT ----
1
